# deep-learning-python-sungkim

./: README.md
code/: pyproject.toml
code/ml-lab-01/: 01-helloworld.py  02-coputational-graph.py  03-placeholder.py
code/ml-lab-02/: linear-regression-feed.py  linear-regression.py
code/ml-lab-03/: 01-minimum-cost.py  02-minimum-cost-update.py  optional-minimum-cost-tf-optimizer.py
